--- a/style.css
+++ b/style.css
@@ -36,3 +36,26 @@ img{
 #margin-top{
     margin-top: 9% !important;
 }
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+#bar{
+    width: 80% !important;
+    margin-left: 15%;
+    display: flex;
+    justify-content: space-around;
+}
+.korpaimg{
+    width: 85%;
+    /* border: 1px solid black; */
+}
